# pap240-program

MISA-SLSCD/inputs/: Fe_Defects_FP_clustering.txt  Fe_Defects_FP_noClustering.txt
MISA-SLSCD/src/: makefile  mod_constants.f90  mod_globalvariables.f90  mod_randdp.f90  mod_structuretype.f90  mod_update_reactions.f90  src_SL_MISASCD.f90  src_SLkmc.f90  src_SLmeshCreate_ZYX.f90  src_cascadeImplan.f90  src_defectAttributes.f90  src_initialDRL.f90  src_initialization.f90  src_postProcessing.f90  src_readInputs.f90  src_releaseMemory.f90
MISA-SLSCD/tests/Dunn2016_Fe_FrenkelPair-clustering/: configure.in
MISA-SLSCD/tests/Dunn2016_Fe_FrenkelPair-noClustering/: configure.in
MISA-SLSCD/tests/RPV_FeCu_Cascade/: configure.in
MISA-SLSCD/tests/RPV_FeCu_FrenkelPair/: configure.in
MISA-SLSCD/tests/SRSCD_Fe_Cascade/: configure.in
